Pass in words as a query string list

--- a/custom-connections/src/assets/styles/Tile.scss
+++ b/custom-connections/src/assets/styles/Tile.scss
@@ -10,6 +10,7 @@
   cursor: pointer;
   user-select: none;
   transition: background-color 0.3s ease;
+  text-transform: capitalize;
 }
 
 .tile.selected {
