--- a/custom-connections/src/assets/styles/Tile.scss
+++ b/custom-connections/src/assets/styles/Tile.scss
@@ -8,6 +8,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  text-align: center;
   user-select: none;
   transition: background-color 0.5s ease-in-out;
   text-transform: capitalize;
@@ -17,6 +18,7 @@
   background-color: #00ffd5;
   transition: ease-in-out 700ms;
 }
+
 .tile:hover {
   border-color: #8bd4d4;
   transition: ease-in-out 300ms;
