--- a/custom-connections/src/assets/styles/Grid.scss
+++ b/custom-connections/src/assets/styles/Grid.scss
@@ -7,7 +7,7 @@
   width: fit-content;
   padding: 10px;
   border-radius: 10px;
-  gap: 10px;
+  gap: 30px;
 }
 
 .grid {
@@ -15,6 +15,10 @@
   flex-direction: column;
   gap: 10px;
   padding: 20px;
+}
+
+.grid-row.solved {
+    transition-duration: 0.5s;
 }
 
 .grid-row.solved:nth-child(1n) {
