--- a/custom-connections/src/assets/styles/Creator.scss
+++ b/custom-connections/src/assets/styles/Creator.scss
@@ -1,3 +1,10 @@
+.creator-page {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .controls {
     display: flex;
     gap: 2rem;
