Fix editor logic

--- a/custom-connections/src/assets/styles/Creator.scss
+++ b/custom-connections/src/assets/styles/Creator.scss
@@ -11,3 +11,10 @@
     width: fit-content;
     padding: 20px;
 }
+
+.game-links {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
