Add one away feedback

--- a/custom-connections/src/assets/styles/Game.scss
+++ b/custom-connections/src/assets/styles/Game.scss
@@ -5,3 +5,15 @@
   justify-content: center;
   margin-top: 20px;
 }
+
+.one-away-dialog {
+    align-items: center;
+    padding-left: 40px;
+    padding-right: 40px;
+}
+
+.one-away-text {
+    text-align: center;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
