--- a/src/assets/styles/Tile.scss
+++ b/src/assets/styles/Tile.scss
@@ -3,6 +3,7 @@
   height: 100px;
   border-radius: 10px;
   border: 4px solid #dbe0df;
+  outline: none;
   background-color: #f0f0f0;
   display: flex;
   justify-content: center;
@@ -15,11 +16,17 @@
 }
 
 .tile.selected {
-  background-color: #00ffd5;
+  border: 4px solid #156666;
   transition: ease-in-out 700ms;
+  font-style: italic;
 }
 
 .tile:hover {
   border-color: #8bd4d4;
   transition: ease-in-out 300ms;
+}
+
+.tile.empty .placeholder {
+  color: #aaa;
+  font-style: italic;
 }
