--- a/src/assets/styles/Game.scss
+++ b/src/assets/styles/Game.scss
@@ -3,13 +3,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 20px;
+  margin-top: 1rem;
 }
 
 .one-away-dialog {
     align-items: center;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
 
 .one-away-text {
