--- a/src/assets/styles/GroupedButtons.scss
+++ b/src/assets/styles/GroupedButtons.scss
@@ -1,16 +1,16 @@
 .grouped-buttons {
   display: flex;
   flex-direction: column;
-  gap: 8px;
+  gap: 0.5rem;
 
   background-color: rgb(255, 249, 243);
   padding: 0.5rem;
-  border-radius: 10px;
+  border-radius: 0.5rem;
   border: 4px solid #dbe0df;
 
   .group {
     display: flex;
-    gap: 8px;
+    gap: 0.5rem;
 
     button {
       flex: 1;
