--- a/src/assets/styles/Tile.scss
+++ b/src/assets/styles/Tile.scss
@@ -21,7 +21,7 @@
 }
 
 .tile.editing {
-  border: 4px solid #156666;
+  border: solid #156666;
   transition: ease-in-out 700ms;
   font-style: italic;
 }
@@ -34,4 +34,25 @@
 .tile.empty .placeholder {
   color: #aaa;
   font-style: italic;
+}
+
+
+@media (max-width: 640px) {
+  .tile {
+    /* fill its grid-cell and stay square */
+    width: calc(100% - 0.8rem);
+    height: calc(100% - 0.8rem);
+    /* maintain aspect ratio */
+    aspect-ratio: 1;
+    border-width: 2px;
+    border-radius: 0.5rem;
+    padding: 0.25rem;
+  }
+
+  .tile .tile-text {
+    line-height: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
