--- a/src/assets/styles/Grid.scss
+++ b/src/assets/styles/Grid.scss
@@ -3,22 +3,51 @@
 
 .grid-row {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: fit-content;
-  padding: 0.5rem;
+  align-items: center;
+  padding: 0rem;
   border-radius: 0.5rem;
+  gap: 0;
+}
+
+.grid-row.tiles {
+  flex-direction: row;
   gap: 1.5rem;
+  padding: 0rem;
 }
 
 .grid {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
-  padding: 1rem;
+  gap: 1.5rem;
+  padding: 0rem;
+}
+
+@media (max-width: 640px) {
+  .grid {
+    width: 100%;
+    padding: 0.5rem;
+    gap: 0.5rem;
+  }
+
+  .grid-row {
+    width: 100%;
+  }
+
+  .grid-row.tiles {
+    display: grid;
+    width: calc(100% - 0.5rem);
+    padding: 0rem;
+    gap: 0.5rem;
+    /* create one column per tile, each taking an equal fraction of the row */
+    grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
+  }
 }
 
 .grid-row.solved {
     transition-duration: 0.5s;
+    padding-bottom: 0.5rem;
 }
 
 .grid-row.solved:nth-child(1n) {
@@ -37,19 +66,6 @@
   background-color: $tomato;
 }
 
-
-@media (max-width: 640px) {
-  .grid {
-    width: 100%;
-    padding: 0.5rem;
-  }
-
-  .grid-row {
-    display: grid;
-    width: calc(100% - 0.5rem);
-    padding: 0.25rem;
-    gap: 0.25rem;
-    /* create one column per tile, each taking an equal fraction of the row */
-    grid-template-columns: repeat(auto-fit, minmax(0, 1fr));
-  }
+.category-name {
+    font-size: 1.5rem;
 }
