More styling changes

--- a/src/assets/styles/Game.scss
+++ b/src/assets/styles/Game.scss
@@ -17,3 +17,16 @@
     padding-left: 3rem;
     padding-right: 3rem;
 }
+
+.victory-text {
+    text-align: center;
+    padding-left: 3rem;
+    padding-right: 3rem;
+}
+
+@media (max-width: 640px) {
+    .victory-text {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+}
