--- a/src/assets/styles/Grid.scss
+++ b/src/assets/styles/Grid.scss
@@ -7,6 +7,8 @@
   width: fit-content;
   align-items: center;
   padding: 0rem;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
   border-radius: 0.5rem;
   gap: 0;
 }
@@ -33,6 +35,8 @@
 
   .grid-row {
     width: 100%;
+    padding-left: initial;
+    padding-right: initial;
   }
 
   .grid-row.tiles {
@@ -48,6 +52,7 @@
 .grid-row.solved {
     transition-duration: 0.5s;
     padding-bottom: 0.5rem;
+    margin-top: -1rem;
 }
 
 .grid-row.solved:nth-child(1n) {
@@ -64,6 +69,13 @@
 }
 .grid-row.solved:nth-child(5n) {
   background-color: $tomato;
+}
+
+.grid-row.solved:last-child {
+  margin-bottom: 2rem;
+}
+.grid-row.solved:first-child {
+  margin-top: 1rem;
 }
 
 .category-name {
