--- a/src/assets/styles/Grid.scss
+++ b/src/assets/styles/Grid.scss
@@ -7,8 +7,7 @@
   width: fit-content;
   align-items: center;
   padding: 0rem;
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  padding: 0.5rem;
   border-radius: 0.5rem;
   gap: 0;
 }
@@ -22,7 +21,7 @@
 .grid {
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
   padding: 0rem;
 }
 
@@ -30,13 +29,18 @@
   .grid {
     width: 100%;
     padding: 0.5rem;
-    gap: 0.5rem;
+    gap: 0.0rem;
   }
 
   .grid-row {
     width: 100%;
     padding-left: initial;
     padding-right: initial;
+  }
+
+  .grid-row.solved {
+    width: 100%;
+    margin-bottom: 1.5rem;
   }
 
   .grid-row.tiles {
