--- a/src/assets/styles/Game.scss
+++ b/src/assets/styles/Game.scss
@@ -6,6 +6,13 @@
   gap: 2rem;
 }
 
+.buttons-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 1rem;
+}
+
 .game-container .game-title {
     margin: 0;
 }
